tests/fail/unsupport.stderr
error: unsupported syntax
 --> tests/fail/unsupport.rs:5:7
  |
5 |     a >> b ^ b << a
  |       ^^
